[gd_scene load_steps=7 format=3 uid="uid://c0qahj5yt1c2p"]

[ext_resource type="Script" path="res://scenes/hud/level3/hud.gd" id="1_ohb7t"]
[ext_resource type="Texture2D" uid="uid://b8c2kuno0lylu" path="res://assets/sprites/details/green_sliderUp.png" id="2_7d5ct"]
[ext_resource type="Texture2D" uid="uid://bwdvqaggn5pe4" path="res://assets/sprites/details/green_sliderDown.png" id="3_myecq"]
[ext_resource type="Texture2D" uid="uid://bdvx548v0273e" path="res://assets/sprites/details/green_sliderLeft.png" id="4_1uo3y"]
[ext_resource type="Texture2D" uid="uid://cqekng5okbuky" path="res://assets/sprites/details/green_sliderRight.png" id="5_4qmvc"]
[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="6_vjrxx"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ohb7t")

[node name="up2" type="TouchScreenButton" parent="."]
position = Vector2(1681, 725)
scale = Vector2(2.39286, 2.16667)
texture_normal = ExtResource("2_7d5ct")
action = "up"
visibility_mode = 1

[node name="down" type="TouchScreenButton" parent="."]
position = Vector2(1684, 885)
scale = Vector2(2.39285, 2.2381)
texture_normal = ExtResource("3_myecq")
action = "down"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2(50, 866)
scale = Vector2(2.66667, 2.3871)
texture_normal = ExtResource("4_1uo3y")
action = "left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2(212, 864)
scale = Vector2(2.51283, 2.41936)
texture_normal = ExtResource("5_4qmvc")
action = "right"
visibility_mode = 1

[node name="FoodLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = -1.0
offset_right = 230.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("6_vjrxx")
theme_override_font_sizes/font_size = 64
text = "Еда: "

[node name="FoodLabelUpdateTimer" type="Timer" parent="FoodLabel"]
wait_time = 0.25

[node name="LevelCompleteLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = 215.0
offset_right = 1922.0
offset_bottom = 458.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("6_vjrxx")
theme_override_font_sizes/font_size = 64
text = "Вы выполнили задание.
Счёт: "
horizontal_alignment = 1

[node name="HideButton" type="Button" parent="."]
offset_left = 568.0
offset_top = 592.0
offset_right = 1354.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("6_vjrxx")
theme_override_font_sizes/font_size = 36
text = "Закончить уровень"

[connection signal="timeout" from="FoodLabel/FoodLabelUpdateTimer" to="." method="_on_food_label_update_timer_timeout"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
